added .vscode folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -357,4 +357,7 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# .vscode folder
+.vscode/
+
 # End of https://www.toptal.com/developers/gitignore/api/csharp
