--- a/5 - UiPath/FindAMovie/.local/ProjectSettings.json
+++ b/5 - UiPath/FindAMovie/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"SwapValues.xaml\",\"MarshmallowSwitch.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
